# bbsea

./: .gitignore  README.md  bbsea_pipeline.sh  inference.sh  pyproject.toml  train.sh
bebs_pipeline/: bebs_pipeline.py  utils.py
bebs_pipeline/config/: bebs_pipeline.yaml  environment.yaml
bebs_pipeline/config/scene/: 0.yaml  1.yaml  10.yaml  11.yaml  12.yaml  13.yaml  14.yaml  15.yaml  16.yaml  17.yaml  18.yaml  19.yaml  2.yaml  20.yaml  21.yaml  22.yaml  23.yaml  24.yaml  25.yaml  26.yaml  27.yaml  28.yaml  29.yaml  3.yaml  30.yaml  31.yaml  32.yaml  4.yaml  5.yaml  6.yaml  7.yaml  8.yaml  9.yaml  test.sh
bebs_pipeline/perception/: clip_utils.py  object_detect.py  point_cloud_utils.py  scene_graph.py  state_detect.py
bebs_pipeline/robot_utils/: general_utils.py  grasp_utils.py  place_utils.py  primitive_actions.py
bebs_pipeline/success_infer/: prompt.txt  success_infer.py
bebs_pipeline/task_decompose/: prompt.txt  task_decompose.py
bebs_pipeline/task_propose/: prompt.txt  task_propose.py
environment/: bebs_put_block_in_bin.py  bebs_scene.py  mujocoEnv.py  rrt.py  table_top.py  ur5.py
environment/assets/: __init__.py  ground.xml  zero_ground.xml
environment/assets/bebs_custom/: blue_block.xml  cupboard.xml  green_block.xml  red_block.xml  small_drawer.xml
environment/assets/block/: block.xml  block_for_anchors.xml  small.xml
environment/assets/bowl/: block.xml  bowl.urdf  bowl.xml
environment/assets/custom/: table.xml
environment/assets/insertion/: ell.xml  fixture.xml
environment/assets/line/: line-template.xml
environment/assets/rainbow/: blue_block.xml  green_block.xml  indigo_block.xml  orange_block.xml  red_block.xml  violet_block.xml  yellow_block.xml
environment/assets/square/: green-square.xml  green-squares.xml  small_red.xml  small_violet.xml  small_yellow.xml
environment/assets/stacking_boxes/: large.xml  normal.xml  small.xml
scalingup/: inference.py  train.py
scalingup/config/: common.yaml  multigpu.yaml  train_offline.yaml
scalingup/config/evaluation/: bebs_catapult.yaml  bebs_drawer.yaml  bebs_drawer_data_generation.yaml  bebs_put_block_in_bin.yaml  common.yaml  table_top.yaml
scalingup/config/policy/: diffusion.yaml
scalingup/data/: window_dataset.py
scalingup/environment/mujoco/: bebs_catapult.py  bebs_drawer.py  bebs_drawer_data_generation.py  bebs_put_block_in_bin.py  bebs_table_top_pick_and_place.py  drawer.py
scalingup/evaluation/: base.py
scalingup/utils/: core.py  generic.py  openai_api.py
(+12 files in other folders)
